{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 210,
  "lineage": "f47331fd-5302-6957-942c-8092e2a5e7e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:705307574472:instance/i-09070ab59c9b04fe1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "flask_ec2_iam_role",
            "id": "i-09070ab59c9b04fe1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "tf_ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0173f69bfc4acfcec"
              }
            ],
            "primary_network_interface_id": "eni-0173f69bfc4acfcec",
            "private_dns": "ip-10-0-5-17.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.17",
            "public_dns": "ec2-65-0-101-244.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.101.244",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b6c10732c05e3e8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5cc0cd682fd49df",
            "tags": {
              "Name": "tf_flask_app"
            },
            "tags_all": {
              "Name": "tf_flask_app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096d3f60edccd0455"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "i-09070ab59c9b04fe1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_iam_role",
            "aws_key_pair.ec2_key",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:internet-gateway/igw-09201d5afa69f46fc",
            "id": "igw-09201d5afa69f46fc",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask_app_ig"
            },
            "tags_all": {
              "Name": "flask_app_ig"
            },
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:loadbalancer/app/tf-lb-20251212174922663700000006/bd7a03907913ee23",
            "arn_suffix": "app/tf-lb-20251212174922663700000006/bd7a03907913ee23",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20251212174922663700000006-567926878.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:loadbalancer/app/tf-lb-20251212174922663700000006/bd7a03907913ee23",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20251212174922663700000006",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0c18c646cb1b9b62d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0565e1c2380882c9c"
              },
              {
                "subnet_id": "subnet-0a5cc0cd682fd49df"
              }
            ],
            "subnets": [
              "subnet-0565e1c2380882c9c",
              "subnet-0a5cc0cd682fd49df"
            ],
            "tags": {
              "Name": "flask_app_alb"
            },
            "tags_all": {
              "Name": "flask_app_alb"
            },
            "vpc_id": "vpc-0c8abc353dfd4c90e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:loadbalancer/app/tf-lb-20251212174922663700000006/bd7a03907913ee23"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tg_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:listener/app/tf-lb-20251212174922663700000006/bd7a03907913ee23/cdded54e3fdec62d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:targetgroup/tf-20251212174911542900000001/ae9cde16ce5fb9bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:listener/app/tf-lb-20251212174922663700000006/bd7a03907913ee23/cdded54e3fdec62d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:loadbalancer/app/tf-lb-20251212174922663700000006/bd7a03907913ee23",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:listener/app/tf-lb-20251212174922663700000006/bd7a03907913ee23/cdded54e3fdec62d"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:targetgroup/tf-20251212174911542900000001/ae9cde16ce5fb9bd",
            "arn_suffix": "targetgroup/tf-20251212174911542900000001/ae9cde16ce5fb9bd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:targetgroup/tf-20251212174911542900000001/ae9cde16ce5fb9bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20251212174911542900000001",
            "name_prefix": "tf-",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "flask_alb_tg"
            },
            "tags_all": {
              "Name": "flask_alb_tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:705307574472:targetgroup/tf-20251212174911542900000001/ae9cde16ce5fb9bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:route-table/rtb-01f1bddff8904f057",
            "id": "rtb-01f1bddff8904f057",
            "owner_id": "705307574472",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09201d5afa69f46fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flask_route_table"
            },
            "tags_all": {
              "Name": "flask_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "rtb-01f1bddff8904f057",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.aws_ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fed66b6f69eaf61",
            "region": "ap-south-1",
            "route_table_id": "rtb-01f1bddff8904f057",
            "subnet_id": "subnet-0a5cc0cd682fd49df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aws_ig",
            "aws_route_table.route_table",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03743102da9de0a85",
            "region": "ap-south-1",
            "route_table_id": "rtb-01f1bddff8904f057",
            "subnet_id": "subnet-0565e1c2380882c9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aws_ig",
            "aws_route_table.route_table",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:security-group/sg-0c18c646cb1b9b62d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c18c646cb1b9b62d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251212174911543500000002",
            "name_prefix": "terraform-",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask_alb_sg"
            },
            "tags_all": {
              "Name": "flask_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "sg-0c18c646cb1b9b62d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:security-group/sg-096d3f60edccd0455",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096d3f60edccd0455",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ALB to ECS",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c18c646cb1b9b62d"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-20251212174913990400000004",
            "name_prefix": "terraform-",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask_ecs_sg"
            },
            "tags_all": {
              "Name": "flask_ecs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "sg-096d3f60edccd0455",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:security-group/sg-09499f11bf3274753",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09499f11bf3274753",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096d3f60edccd0455"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20251212174916432300000005",
            "name_prefix": "terraform-",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask_rds_sg"
            },
            "tags_all": {
              "Name": "flask_rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "sg-09499f11bf3274753",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-00181cdfe4624bf17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00181cdfe4624bf17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask_private_subnet_0"
            },
            "tags_all": {
              "Name": "flask_private_subnet_0"
            },
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-00181cdfe4624bf17",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-009c256f50e9ccc65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009c256f50e9ccc65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask_private_subnet_1"
            },
            "tags_all": {
              "Name": "flask_private_subnet_1"
            },
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-009c256f50e9ccc65",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-0a5cc0cd682fd49df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5cc0cd682fd49df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask_public_subnet_0"
            },
            "tags_all": {
              "Name": "flask_public_subnet_0"
            },
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-0a5cc0cd682fd49df",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-0565e1c2380882c9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0565e1c2380882c9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask_public_subnet_1"
            },
            "tags_all": {
              "Name": "flask_public_subnet_1"
            },
            "vpc_id": "vpc-0c8abc353dfd4c90e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-0565e1c2380882c9c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:vpc/vpc-0c8abc353dfd4c90e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a6a8bb710f1dbc3",
            "default_route_table_id": "rtb-016e65c7fe841589a",
            "default_security_group_id": "sg-05666b8d4091f3aa6",
            "dhcp_options_id": "dopt-05838f6e699ce486a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c8abc353dfd4c90e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016e65c7fe841589a",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask-vpc"
            },
            "tags_all": {
              "Name": "flask-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "vpc-0c8abc353dfd4c90e",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}